samples/_failures_safe/1761328519_8e2e61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b6183c0.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_0b6183c0.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
